--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build:umd": "rollup -c rollup.config.js -f umd",
     "build": "npm run clean && npm run build:cjs && npm run build:amd && npm run build:umd",
     "clog": "conventional-changelog -p angular -i CHANGELOG.md -w",
-    "test": "echo \"No test specified\" && exit 0"
+    "test": "mocha --compilers js:babel-core/register --recursive 'test/main.js'"
   },
   "repository": {
     "type": "git",
@@ -42,6 +42,7 @@
     "rimraf": "^2.5.0",
     "rollup": "^0.24.1",
     "rollup-plugin-babel": "^2.3.9",
+    "router5": "router5/router5#v2",
     "yargs": "^3.32.0"
   }
 }
