--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "clean": "rimraf dist",
     "lint": "eslint modules",
     "build:cjs": "babel modules --out-dir dist/commonjs",
-    "build:amd": "rollup -c rollup.config.js -f amd",
-    "build:umd": "rollup -c rollup.config.js -f umd",
-    "build": "npm run clean && npm run build:cjs && npm run build:amd && npm run build:umd",
+    "build:amd": "rollup -c rollup.config.js -f amd && rollup -c rollup.config.js -f amd --uglify",
+    "build:umd": "rollup -c rollup.config.js -f umd && rollup -c rollup.config.js -f umd --uglify",
+    "build:iife": "rollup -c rollup.config.js -f iife && rollup -c rollup.config.js -f iife --uglify",
+    "build": "npm run clean && npm run build:cjs && npm run build:amd && npm run build:umd && npm run build:iife",
     "clog": "conventional-changelog -p angular -i CHANGELOG.md -w",
     "test": "mocha --compilers js:babel-core/register --recursive 'test/main.js'"
   },
@@ -42,6 +43,7 @@
     "rimraf": "^2.5.0",
     "rollup": "^0.24.1",
     "rollup-plugin-babel": "^2.3.9",
+    "rollup-plugin-uglify": "^0.1.0",
     "router5": "router5/router5#v2",
     "yargs": "^3.32.0"
   }
