--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "rollup": "^0.24.1",
     "rollup-plugin-babel": "^2.3.9",
     "rollup-plugin-uglify": "^0.1.0",
-    "router5": "router5/router5#v2",
+    "router5": "^2.0.0",
     "yargs": "^3.32.0"
   },
   "peerDependencies": {
