--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,13 @@
 {
-    "presets": [
-        "es2015"
-    ],
     "plugins": [
         "transform-object-rest-spread"
-    ]
+    ],
+    "env": {
+        "development": {
+            "presets": [ "es2015" ]
+        },
+        "es": {
+            "presets": [ "es2015-rollup" ]
+        }
+    }
 }
