--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "router5-persistent-params",
-  "version": "1.1.3",
+  "version": "3.0.0",
   "description": "Persistent route parameters plugin for router5",
   "main": "dist/commonjs/index.js",
-  "jsnext:main": "modules/index.js",
+  "jsnext:main": "dist/es/index.js",
   "scripts": {
     "clean": "rimraf dist",
     "lint": "eslint modules",
+    "build:es": "BABEL_ENV=es babel modules --out-dir dist/es",
     "build:cjs": "babel modules --out-dir dist/commonjs",
     "build:amd": "rollup -c rollup.config.js -f amd && rollup -c rollup.config.js -f amd --uglify",
     "build:umd": "rollup -c rollup.config.js -f umd && rollup -c rollup.config.js -f umd --uglify",
     "build:iife": "rollup -c rollup.config.js -f iife && rollup -c rollup.config.js -f iife --uglify",
-    "build": "npm run clean && npm run build:cjs && npm run build:amd && npm run build:umd && npm run build:iife",
+    "build": "npm run clean && npm run build:cjs && npm run build:es && npm run build:amd && npm run build:umd && npm run build:iife",
     "clog": "conventional-changelog -p angular -i CHANGELOG.md -w",
     "test": "mocha --compilers js:babel-core/register --recursive 'test/main.js'"
   },
@@ -44,10 +45,10 @@
     "rollup": "^0.24.1",
     "rollup-plugin-babel": "^2.3.9",
     "rollup-plugin-uglify": "^0.1.0",
-    "router5": "^2.0.0",
+    "router5": "^3.0.0",
     "yargs": "^3.32.0"
   },
   "peerDependencies": {
-    "router5": "^2.0.0"
+    "router5": "^3.0.0"
   }
 }
